--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -15,3 +15,4 @@ $fx-grid-breakpoints: (s: 768, m: 940, l: 1200);
 $fx-column-sizes: 5, 10, 15, 20, 25, 30, 33.3333, 40, 45, 50, 55, 60, 66.6666, 70, 75, 80, 85, 90, 95, 100;
 $fx-row-position: (start: flex-start, center: center, end: flex-end, between: space-between, around: space-around);
 $fx-col-position: (top: flex-start, center: center, bottom: flex-end);
+$fx-items-position: (top: flex-start, center: center, bottom: flex-end, baseline: baseline);
