--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,11 +8,11 @@
 $fx-grid-gutter: 16;
 
 // Default breakpoints for s, m and l columns
-$fx-grid-breakpoints: (s: 768, m: 940, l: 1200);
+$fx-grid-breakpoints: (s: 769, m: 1024, l: 1280);
 
 // DON'T MODIFY BELOW!
 //-------------------------
-$fx-column-sizes: 5, 10, 15, 20, 25, 30, 33.3333, 40, 45, 50, 55, 60, 66.6666, 70, 75, 80, 85, 90, 95, 100;
-$fx-row-position: (start: flex-start, center: center, end: flex-end, between: space-between, around: space-around);
-$fx-col-position: (top: flex-start, center: center, bottom: flex-end);
-$fx-items-position: (top: flex-start, center: center, bottom: flex-end, baseline: baseline);
+$fx-column-sizes:    1, 2, 3, 4, 5, 10, 15, 20, 25, 30, 33.3333, 40, 45, 50, 55, 60, 66.6666, 70, 75, 80, 85, 90, 95, 96, 97, 98, 99, 100;
+$fx-just-position:  (top: flex-start, center: center, end: flex-end, baseline: baseline, between: space-between, around: space-around, evenly:space-evenly, right: right, left: left, stretch: stretch);
+$fx-self-position:  (start: flex-start, center: center, end: flex-end, baseline: baseline, stretch: stretch);
+$fx-items-position: (start: flex-start, center: center, end: flex-end, baseline: baseline, stretch: stretch);
